--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,7 @@ letter-spacing: 0.02em;
 .contact:hover{
     text-decoration: none;
     
+    
     color: #2196F3;
     
     font-weight: 500;
@@ -422,6 +423,54 @@ border-radius: 0px 0px 4px 4px;
         margin: 0;
         padding: 0;
        }
+       .icon-lorem-background{
+        display: block;
+        margin-left: auto;
+        margin-right:auto ;
+        width: 70px;
+        height: 70px;
+        
+        
+        
+        
+       
+    background-color:#F5F4FA;
+    
+       }
+       .contact-icon-mail{
+        width: 16px;
+        height: 12px;
+       }
+    
+    .contact-icon-mail:hover{
+     width: 16px;
+     height: 12px;
+     fill: #2196F3;
+    }
+    
+    
+     .contact-icon-phone{
+    
+            width: 10px;
+            height: 16px;
+    
+           }
+.contact-icon-phone:hover{
+    width: 10px;
+    height: 16px;
+    fill: #2196F3;
+
+}
+
+
+       
+       
+
+
+
+
+
+
 
         
 
